--- a/app/views/tips/_form.html.erb
+++ b/app/views/tips/_form.html.erb
@@ -1,3 +1,4 @@
+	<% javascript("update_tip") %>
   <%= error_messages_for :tip, 
 				:header_message => "You can't #{ @tip.new_record? ? "publish" : "save" } your tip yet!",
 				:header_tag => "p" %>
