--- a/app/views/homepages/about.html.erb
+++ b/app/views/homepages/about.html.erb
@@ -2,14 +2,11 @@
 <%- cache(:name => "about") do -%>
 	<h2>About this site</h2>
 	<p class='easy_read'>
-		Handy Rails Tips is a site for Ruby on Rails developers to write &amp; publish their tips and tutorials on Ruby on Rails. By doing so, we can all learn from each other's ideas and improve our own ideas with feedback from others.<br />
-		This is also a great opportunity for you to showcase a gem or plugin you've created and describe how it can be used.
-	</p> 
-	<p class="easy_read">
-		All Rails developers are welcome to <%= link_to "create an account", signup_path %> and start writing tips. If you'd like to offer feedback on how this site can be improved, you can send me a message on the <%= link_to "contact page", new_feedback_path %>.<br />
+    Handy Rails Tips is a place for me (Gavin Morrice) to offload and share everything I learn as I work with Ruby and Rails.
+    
+    Feel free to leave a comment or get in touch - gavin {at} thinkersplayground {dot} com
 	</p>
 	<p class='easy_read'>
-		This site was built by Gavin Morrice with the help of the following:
 		<ul style='width: 85%; margin: 0 auto'>
 			<%- @externals_hash.each do |name, url| -%>
 				<li><%= link_to name, url, :rel => "external" %></li>
