--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,9 +1,3 @@
 <%- title "Welcome" -%>
-<%- cache("invite") do -%>
-<p class='align_center' style='background: #E3E3FA;padding:0.5em;'>
-	Handy Rails Tips is open to everybody who wants to write.<br />
-	If you'd like to share some of your own rails tips <%= link_to 'create an account', signup_path %> today.
-</p>
-<%- end -%>
-<%= render :partial => "tips/tip", :collection => @tips %>
+<%= render @tips %>
 <p class='align_right'><%= link_to "more tips »", tips_path %></p>
