should work on server now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
 		<div id="content">
 			<div id="collapse">
 				<div id='yield'>
-					<%= render 'layouts/flash' unless flash.empty? %>
+					<%= render 'layouts/flash_notice' unless flash.empty? %>
 					<%= yield %>					
 				</div>
 			</div>
