changed email address

--- a/app/views/homepages/advertise.html.erb
+++ b/app/views/homepages/advertise.html.erb
@@ -4,6 +4,6 @@
 	<p class='easy_read'>
 		If you saw the ads here, chances are your customers will too.<br />
 		To find out more about advertising here, please email me at<br /> 
-		<strong>handyrailstips{at}gmail{dot}com</strong>
+		<%= mail_to "gavin@thinkersplayground.com", "gavin (at) thinkersplayground (dot) com", :encrypt => :hash %>
 	</p>
 <%- end -%>
