changed the no. of tips in XML to be all

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 	<div id="footer">
-		<p class='float_left'>Site by <a href="http://gavinmorrice.com">Gavin Morrice</a> &copy; 2009</p>
+		<p class='float_left'>Site by <a href="http://gavinmorrice.com">Gavin Morrice</a> &copy; 2009 - <%= Date.today.year %></p>
 		<p class='float_right'><%= render 'layouts/cc'%></p>
 	</div>
 	
