--- a/app/stylesheets/coderay.less
+++ b/app/stylesheets/coderay.less
@@ -19,7 +19,7 @@ pre{
 	overflow: auto;
 }
 
-div.code{margin: 0.2em;font-size: 1em;}
+div.code{margin: 0.2em;font-size: 1em;padding: 1em;}
 
 /* ruby code */
 div.ruby_code{
