moved to Google ads

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 	<meta name="author" content="Gavin Morrice" />
 	<meta name="rating" content="general" />
   <meta name="resource-type" content="document" />
-	<meta name="keywords" content="rails, ruby on rails, tutorials, tips, help, <%= @tip.tag_list if @tip %>" />
-	<%= javascript_include_tag :all %>
+	<meta name="keywords" content="rails, rails tutorials, ruby on rails, tutorials, tips, help, <%= @tip.tag_list if @tip %>" />
 	<%= stylesheet_link_tag %W( reset generic application coderay ), :cache => true %>
+	<%= javascript_include_tag :all %>	
 	<%= auto_discovery_link_tag :rss, "http://feeds2.feedburner.com/LatestTipsOnHandyrailstipscom" %>
 	<%= yield(:head) %>
 </head>
