--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,8 +58,11 @@
 			</div>
 			<div id='right_bar'>
 				<%= render  'layouts/search_form' %>
-				<%= render @ads %>
+				
+				<%# render @ads %>
+				<!-- 
 				<p class='align_center'>[<%= link_to("advertise here", advertise_path) %>]</p>
+				-->
 				<hr />
 				<%= render  'layouts/amazon' %>
 			</div>
