updated about page

--- a/app/views/homepages/about.html.erb
+++ b/app/views/homepages/about.html.erb
@@ -1,9 +1,14 @@
 <%- title "About" -%>
 <%- cache(:name => "about") do -%>
-	<h2>About this site</h2>
+	<h2>About Handy Rails Tips</h2>
 	<p class='easy_read'>
-    Handy Rails Tips is a place for me (Gavin Morrice) to offload and share everything I learn as I work with Ruby and Rails.
-    
-    Feel free to leave a comment or get in touch - gavin {at} thinkersplayground {dot} com
+    Handy Rails Tips is a place for me (<%= link_to("Gavin Morrice", "http://gavinmorrice.com") %>) to offload and share everything I learn as I work with Ruby and Rails.
+		<br />
+		<br />		
+	
+    Feel free to leave a comment or get in touch - <%= mail_to("gavin@gavinmorrice.com","gavin@gavinmorrice.com", :encode => :javascript) %>
+		<br />
+		<br />		
+		Thanks for visiting!
 	</p>
 <%- end -%>
