--- a/app/views/layouts/_amazon.html.erb
+++ b/app/views/layouts/_amazon.html.erb
@@ -1,9 +1,33 @@
-<script type="text/javascript"><!--
-google_ad_client = "pub-4956441175251109";
-/* Handy Rails Tips Skyscraper */
-google_ad_slot = "2381818865";
-google_ad_width = 120;
-google_ad_height = 600;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+<%- cache("GoogleAds") do -%>
+	<script type="text/javascript"><!--
+	google_ad_client = "pub-4956441175251109";
+	/* Handy Rails Tips Skyscraper */
+	google_ad_slot = "2381818865";
+	google_ad_width = 120;
+	google_ad_height = 600;
+	//-->
+	</script>
+	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+<%- end -%>
+<!-- if the page is big enough -->
+<% if @tip %>
+	<%- cache("amazon") do -%>
+		<div class='align_center'>
+			<script type="text/javascript">
+				amazon_ad_tag = "gavimorrhome-21";
+				amazon_ad_width = "120";
+				amazon_ad_height = "600";
+				amazon_ad_logo = "hide";
+				amazon_ad_link_target = "new";
+				amazon_ad_border = "hide";
+				amazon_color_background = "F4F5F5";
+				amazon_color_text = "222222";
+				amazon_color_logo = "DDDDDD";
+				amazon_ad_exclude = "perl;rail;php;Wax;train";
+				amazon_ad_include = "ruby+on+rails;ruby;scripaculous";
+				amazon_ad_categories = "a";
+			</script>
+			<script type="text/javascript" src="http://www.assoc-amazon.co.uk/s/ads.js"></script>
+		</div>
+	<%- end -%>
+<% end %>
