fewer tips per homepage

--- a/app/views/layouts/_amazon.html.erb
+++ b/app/views/layouts/_amazon.html.erb
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 <%- end -%>
 <!-- if the page is big enough -->
-<% if @tip %>
+<% if @tip || @tips %>
 	<%- cache("amazon") do -%>
 		<div class='align_center'>
 			<script type="text/javascript">
