--- a/app/views/layouts/_google_analytics.html.erb
+++ b/app/views/layouts/_google_analytics.html.erb
@@ -1,11 +1,8 @@
-	<script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
+<% cache "google_analytics" do %>
   <script type="text/javascript">
-    try {
-      var pageTracker = _gat._getTracker("UA-9249462-1");
-      pageTracker._trackPageview();
-    } catch(err) {}
+  try {
+    var pageTracker = _gat._getTracker("UA-9249462-1");
+    pageTracker._trackPageview();
+  } catch(err) {}
   </script>
-  
+<% end %>
