re-added caching - ads issue is with account, not caching

--- a/app/views/layouts/_google_ads.html.erb
+++ b/app/views/layouts/_google_ads.html.erb
@@ -1,3 +1,4 @@
+<% cache :google_ads do %>
 <script type="text/javascript"><!--
 google_ad_client = "pub-4956441175251109";
 google_ad_slot   = "2381818865";
@@ -6,3 +7,4 @@ google_ad_height = 600;
 //-->
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+<% end %>
