--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,8 @@
 				<p class='align_center'>[<%= link_to("advertise here", advertise_path) %>]</p>
 				-->
 				<hr />
+				<%= render  'layouts/google_ads' %>
+			  <br />
 				<%= render  'layouts/amazon' %>
 				<br />
 			</div>
