--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,7 @@
 	<meta name="rating" content="general" />
   <meta name="resource-type" content="document" />
 	<meta name="keywords" content="rails, rails tutorials, ruby on rails, tutorials, tips, help, <%= @tip.tag_list if @tip %>" />
-	<%= stylesheet_link_tag %W( reset generic application coderay ), :cache => true %>
-	<%= javascript_include_tag :all %>
-  <%= javascript_include_tag "http://google-analytics.com/ga.js" if Rails.env == "production" %>
+	<%= stylesheet_link_tag "all" %>
 	<%= auto_discovery_link_tag :rss, "http://feeds2.feedburner.com/LatestTipsOnHandyrailstipscom" %>
 	<%= yield(:head) %>
 </head>
@@ -82,6 +80,8 @@
 		<p class='float_right'><%= render 'layouts/cc'%></p>
 	</div>
 	
+	<%= javascript_include_tag :all %>
+  <%= javascript_include_tag "http://google-analytics.com/ga.js" if Rails.env == "production" %>
   <%= render 'layouts/google_analytics' if RAILS_ENV == "production" %>
 
 	
