--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
 				<p class='align_center'>[<%= link_to("advertise here", advertise_path) %>]</p>
 				-->
 				
-				<%= link_to(image_tag("dropbox.png", "http://www.dropbox.com/referrals/NTY5MDA3NTk5")) %>
+				<%= link_to(image_tag("dropbox.png"), "http://www.dropbox.com/referrals/NTY5MDA3NTk5") %>
 				
 				<hr />
 				<%= render  'layouts/google_ads' %>
