--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -11,7 +11,7 @@
 	color: #333;
 	word-spacing: 0.2em;
 	letter-spacing: 0.05em;
-	margin: 1em;
+	margin: 1em 0;
 }
 .disabled, .hidden{display:none}
 .silver_top{
