--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -1,3 +1,3 @@
-<% title "Tips", false %>
+<% title "Ruby on Rails Tutorials", false %>
 <%= render @tips %>
 <%= will_paginate @tips, :previous_label => "« prev", :next_label => "next »", :class => "align_right" %>
