--- a/app/views/layouts/_search_form.html.erb
+++ b/app/views/layouts/_search_form.html.erb
@@ -3,7 +3,7 @@
 		<div>
 			<input type="hidden" name="cx" value="001757145794475423976:_x4aeek-tas" />
 			<input type="hidden" name="ie" value="UTF-8" />
-			<input type="text" name="q" size="31" />
+			<input type="search" name="q" size="20" />
 			<input type="submit" name="sa" value="search" />
 		</div>
 	</form>
